# AndroidUI-SkiaSharp

./: .gitmodules  BuildNative.ps1  BuildNativeAndroid.ps1  BuildNativeDebugWindows.ps1  BuildNativeUWP.ps1  BuildNativeWindows.ps1  BuildNugetDebug_skip_natives_no_test.ps1  BuildNuget_skip_natives.ps1  BuildNuget_skip_natives_no_test.ps1  BuildNuget_skip_natives_no_test_no_install.ps1  PS_GENERATE_BINGINDS_API.ps1  PS_INSTALL_NUGET.ps1  PS_SETUP_FOR_BUILD.ps1  VERSIONS.txt  build_instructions.md
binding/: libSkiaSharp.json
binding-native/: BUILD.gn
binding-native/include/c/: gr_context.h  sk_bitmap.h  sk_blender.h  sk_canvas.h  sk_codec.h  sk_colorfilter.h  sk_colorspace.h  sk_drawable.h  sk_general.h  sk_image.h  sk_imagefilter.h  sk_maskfilter.h  sk_matrix.h  sk_paint.h  sk_path.h  sk_patheffect.h  sk_picture.h  sk_pixmap.h  sk_region.h  sk_runtime_effect_builder.h  sk_runtimeeffect.h  sk_shader.h  sk_testbed.h  sk_textblob.h  sk_typeface.h  sk_types.h
binding-native/include/xamarin/: SkManagedCallbackCanvas.h  SkPaintExtraInfo.h  sk_managedcallbackcanvas.h  sk_managedidchangelistenerlist.h  sk_paint_extra_info.h
binding-native/src/c/: gr_context.cpp  sk_bitmap.cpp  sk_blender.cpp  sk_canvas.cpp  sk_codec.cpp  sk_colorfilter.cpp  sk_colorspace.cpp  sk_document.cpp  sk_drawable.cpp  sk_enums.cpp  sk_font.cpp  sk_general.cpp  sk_image.cpp  sk_imagefilter.cpp  sk_maskfilter.cpp  sk_matrix.cpp  sk_paint.cpp  sk_path.cpp  sk_patheffect.cpp  sk_picture.cpp  sk_pixmap.cpp  sk_region.cpp  sk_runtime_effect_builder.cpp  sk_runtimeeffect.cpp  sk_shader.cpp  sk_structs.cpp  sk_testbed.cpp  sk_textblob.cpp  sk_typeface.cpp  sk_types_priv.h
binding-native/src/xamarin/: SkManagedCallbackCanvas.cpp  SkPaintExtraInfo.cpp  SkiaKeeper.c  sk_managedallocator.cpp  sk_managedcallbackcanvas.cpp  sk_manageddrawable.cpp  sk_managedidchangelistener.cpp  sk_managedidchangelistenerlist.cpp  sk_managedpixelref.cpp  sk_managedpngchunkreader.cpp  sk_managedstream.cpp  sk_managedtracememorydump.cpp  sk_paint_extra_info.cpp
binding/Binding/: Definitions.cs  GRRecordingContext.cs  SKAndroidCodec.cs  SKBitmap.cs  SKBlender.cs  SKCallbackCanvas.cs  SKCallbackCanvasForwarder.cs  SKCanvas.cs  SKCanvasForwarder.cs  SKCodec.cs  SKColorFilter.cs  SKColorSpace.cs  SKDrawable.cs  SKFontManager.cs  SKGraphics.cs  SKIDChangeListener.cs  SKImage.cs  SKImageFilter.cs  SKImageInfo.cs  SKMaskFilter.cs  SKMatrix.cs  SKMatrix44.cs  SKNullCanvas.cs  SKObject.cs  SKPaint.cs  SKPath.cs  SKPathEffect.cs  SKPicture.cs  SKPixelRef.cs  SKPixmap.cs  SKPngChunkReader.cs  SKRegion.cs  SKRuntimeEffect.cs  SKRuntimeEffectBuilder.cs  SKShader.cs  SKString.cs  SKTestBed.cs  SKTextBlob.cs  SKTypeface.cs  SKVertices.cs  (+2 more)
cake/: externals.cake  msbuild.cake  native-shared.cake
native/tizen/libSkiaSharp/: project_def.prop
native/uwp/SkiaSharp.Views.Interop.UWP/: SkiaSharp.Views.Interop.UWP.vcxproj
native/uwp/libHarfBuzzSharp/: libHarfBuzzSharp.vcxproj
native/windows/: build.cake
native/windows/libHarfBuzzSharp/: libHarfBuzzSharp.vcxproj
scripts/: install-gtk.ps1  install-llvm.ps1
utils/SkiaSharpGenerator/: BaseTool.cs
